dons_tests/valid_kxi/newa_args_type_check.kxi
class MyClass {
    MyClass(int a, char b) {}
}    
void main(){
    MyClass A = new MyClass(1, 'c');
}
