dons_tests/invalid_kxi/newa_bad_type_check.kxi
class MyClass {
    MyClass(int a, char b) {}
}    
void main(){
    MyClass A = new MyClass('c', 1);
    MyClass B = new MyClass();
}
